@@ -1,0 +1,4 @@
+	.text
+	.long	1
+	.data
+	.long	2
